--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" height="500"></canvas>
     <script src="index.js"></script>
   </body>
 </html>
